Editor: do not request updates for the complete annotation area

... inside the paint event. We should always make sure to call an
explicit update when we add, remove or change annotations via text
marks.

Task-number: QTCREATORBUG-26812
Change-Id: I5afbdad5e1916e99665b5cb1b1cd2a0bbf7335c3
Reviewed-by: Christian Stenger <christian.stenger@qt.io>